--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+dist/Chrome[[:space:]]MCP[[:space:]]Tunnel-1.0.0-arm64.dmg filter=lfs diff=lfs merge=lfs -text
 *.AppImage filter=lfs diff=lfs merge=lfs -text
