--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-dist/Chrome[[:space:]]MCP[[:space:]]Tunnel-1.0.0-arm64.dmg filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
+*.dmg filter=lfs diff=lfs merge=lfs -text
 *.AppImage filter=lfs diff=lfs merge=lfs -text
